<resources>
    <string name="app_name">app-design2</string>
    <string name="action_switchcam">Switch Camera</string>

    <!-- Strings related to Capture Photo -->
    <string name="take_button">Take</string>
    <string name="save_button">Save</string>

    <!-- Strings related to Settings -->

    <!-- My features -->
    <string name="pref_header_profile">My profile setting</string>

    <string name="pref_title_set_my_photo_1">Upload your photo/video 1</string>

    <string name="pref_title_set_my_photo_2">Upload your photo/video 2</string>

    <string name="pref_title_set_my_photo_3">Upload your photo/video 3</string>
    
    <string name="pref_title_set_my_feature">Upload your features</string>
    
    <!-- Privacy preferences -->
    <string name="pref_header_preference">Privacy preference setting</string>

    <string name="pref_title_yes_gesture">Enable Yes gesture</string>
    <string name="pref_description_yes_gesture">Permission for people to take photos of you</string>

    <string name="pref_title_no_gesture">Enable No gesture</string>
    <string name="pref_description_no_gesture">Request for people to remove your information in the photo</string>

    <string name="pref_title_display_location">Location for control</string>
    <string name="pref_default_display_location">HKUST</string>

    <string name="pref_title_select_scenario">Scenarios for control</string>

    <string-array name="pref_scenario_list_titles">
        <item>All</item>
        <item>Disease</item>
        <item>Eating</item>
        <item>Entertainment</item>
        <item>Exhibition</item>
        <item>Transportation</item>
        <item>Nudity</item>
        <item>Public places</item>
        <item>Religion</item>
        <item>Shopping</item>
        <item>Work</item>
        <item>Others</item>
        <item>None</item>
    </string-array>

    <string-array name="pref_scenario_list_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>-1</item>
    </string-array>

    <string-array name="pref_scenario_list_default"></string-array>

    <string name="pref_title_upload_whom_photo">Upload his/her photo</string>
    <string name="pref_description_upload_who_photo">People you do not want to being photographed with</string>

    <string name="pref_title_select_policy">Select policy for control</string>
    <string-array name="pref_policy_list_titles">
        <item>Blur face</item>
        <item>Blur whole body</item>
    </string-array>
    <string-array name="pref_policy_list_values">
        <item>0</item>
        <item>1</item>
    </string-array>
    
    <!-- Other's feature-->
    <string name="pref_description_others_photo_capture">Upload features of the person you do not want to being photographed with</string>
    <string name="pref_title_others_photo_capture">Capture other\'s features</string>

    <string name="pref_description_others_photo_select">Upload features of the person you do not want to being photographed with</string>
    <string name="pref_title_others_photo_select">Select other\'s features</string>

</resources>
