<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="yes_gesture_switch"
        android:summary="@string/pref_description_yes_gesture"
        android:title="@string/pref_title_yes_gesture"/>

    <SwitchPreference
        android:defaultValue="true"
        android:key="no_gesture_switch"
        android:summary="@string/pref_description_no_gesture"
        android:title="@string/pref_title_no_gesture"/>

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_location"
        android:inputType="textCapWords"
        android:key="location_text"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_location"/>

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <MultiSelectListPreference
        android:defaultValue="@array/pref_scenario_list_default"
        android:entries="@array/pref_scenario_list_titles"
        android:entryValues="@array/pref_scenario_list_values"
        android:key="scenario_list"
        android:title="@string/pref_title_select_scenario"/>

    <Preference android:key="his_photo"
                android:summary="@string/pref_description_upload_who_photo"
                android:title="@string/pref_title_upload_whom_photo">

    </Preference>

    <ListPreference
        android:defaultValue="-1"
        android:entries="@array/pref_policy_list_titles"
        android:entryValues="@array/pref_policy_list_values"
        android:key="policy_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_select_policy"/>

</PreferenceScreen>
