<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="Username">
        <EditTextPreference
            android:capitalize="words"
            android:defaultValue=""
            android:inputType="textCapWords"
            android:key="username_text"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_display_username"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="My features">
        <Preference
            android:key="my_feature"
            android:title="@string/pref_title_set_my_feature"
            android:summary="Number of features:">
        </Preference>
    </PreferenceCategory>

    <PreferenceCategory android:title="Privacy Preferences">
        <SwitchPreference
            android:defaultValue="true"
            android:key="yes_gesture_switch"
            android:summary="@string/pref_description_yes_gesture"
            android:title="@string/pref_title_yes_gesture"/>

        <SwitchPreference
            android:defaultValue="true"
            android:key="no_gesture_switch"
            android:summary="@string/pref_description_no_gesture"
            android:title="@string/pref_title_no_gesture"/>

        <!-- NOTE: EditTextPreference accepts EditText attributes. -->
        <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
        <EditTextPreference
            android:capitalize="words"
            android:defaultValue="@string/pref_default_display_location"
            android:inputType="textCapWords"
            android:key="location_text"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_display_location"/>

        <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
             dismiss it. -->
        <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
        <MultiSelectListPreference
            android:defaultValue="@array/pref_scenario_list_default"
            android:entries="@array/pref_scenario_list_titles"
            android:entryValues="@array/pref_scenario_list_values"
            android:key="scenario_list"
            android:title="@string/pref_title_select_scenario"/>

        <ListPreference
            android:defaultValue="0"
            android:entries="@array/pref_policy_list_titles"
            android:entryValues="@array/pref_policy_list_values"
            android:key="policy_list"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_select_policy"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="Other's features">
        <Preference android:key="his_feature"
                    android:summary="@string/pref_description_others_photo_capture"
                    android:title="@string/pref_title_others_photo_capture">

        </Preference>

    </PreferenceCategory>

</PreferenceScreen>